# pulseaudio-next-output

./: .editorconfig  Cargo.toml  LICENSE  PKGBUILD  README.md
.github/workflows/: release.yml  rust.yml
src/: main.rs
